[gd_scene load_steps=31 format=3 uid="uid://dyd10ofa5v0kj"]

[ext_resource type="PackedScene" uid="uid://bxisp2qh6qj2g" path="res://Assets/env1.blend" id="1_wrqop"]
[ext_resource type="Script" path="res://Scripts/camera.gd" id="2_ejfgn"]
[ext_resource type="Script" path="res://Scripts/interfaceManager.gd" id="3_oco58"]
[ext_resource type="Theme" uid="uid://cydykq3qlimf4" path="res://Textures/UITheme.tres" id="4_0cv57"]
[ext_resource type="Texture2D" uid="uid://dajp23sqdsjjr" path="res://Textures/buttonBack.png" id="5_v121j"]
[ext_resource type="Texture2D" uid="uid://cdsnp3012kn85" path="res://Icons/office.png" id="6_mrqsi"]
[ext_resource type="Texture2D" uid="uid://ddhktuchis1xy" path="res://Icons/close.png" id="7_vepxx"]
[ext_resource type="Texture2D" uid="uid://bv4eu1nf71v05" path="res://Icons/options.png" id="8_0y7he"]
[ext_resource type="Texture2D" uid="uid://ccxdhja5mkjau" path="res://Icons/forest.png" id="8_mtqxx"]
[ext_resource type="Script" path="res://Scripts/MouseArea2d.gd" id="8_s8av8"]
[ext_resource type="Texture2D" uid="uid://bxuiyh54m5clr" path="res://Icons/skyscraper.png" id="9_44fox"]
[ext_resource type="Texture2D" uid="uid://2immq8n1sgj0" path="res://Textures/skybox.exr" id="9_c8vlu"]
[ext_resource type="Texture2D" uid="uid://bxvyjgb5kwjhx" path="res://Textures/PauseBack.png" id="9_nq4iw"]
[ext_resource type="Texture2D" uid="uid://b4v1kda6hmyql" path="res://Icons/work-tools.png" id="10_odlnt"]
[ext_resource type="Texture2D" uid="uid://b0gvsvxysr1g7" path="res://Textures/Title_sub.png" id="13_jcqdf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_oxo1t"]
size = Vector3(12.5419, 1, 9.7583)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_wtk1t"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ny5yh"]
texture = ExtResource("5_v121j")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uxim4"]
texture = ExtResource("5_v121j")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q4gm2"]
texture = ExtResource("5_v121j")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xcre6"]
texture = ExtResource("5_v121j")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jluwk"]
texture = ExtResource("5_v121j")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ffs45"]
texture = ExtResource("5_v121j")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w5bw5"]
texture = ExtResource("5_v121j")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jo7a6"]
size = Vector2(1171, 164)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_sv1yx"]
blend_mode = 1
light_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_u1ydi"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_mw5wo"]
panorama = ExtResource("9_c8vlu")

[sub_resource type="Sky" id="Sky_46x10"]
sky_material = SubResource("PanoramaSkyMaterial_mw5wo")

[sub_resource type="Environment" id="Environment_0o6h6"]
background_mode = 2
background_energy_multiplier = 1.75
sky = SubResource("Sky_46x10")
sky_custom_fov = 59.2
sky_rotation = Vector3(0, -3.15905, 0)
fog_light_color = Color(0.770105, 0.739278, 0.558402, 1)
fog_light_energy = 1.26
fog_density = 0.009
fog_aerial_perspective = 0.41
fog_sky_affect = 0.65

[node name="CityScene" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 200, 0, 200)

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(39.2299, 0, 0, 0, 0.241682, 0, 0, 0, 38.26, 0, 0, 0)
shape = SubResource("BoxShape3D_oxo1t")

[node name="env1" parent="StaticBody3D" instance=ExtResource("1_wrqop")]
transform = Transform3D(-2.18557e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18557e-08, 0, -3.05261, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.670945, 0.741507, 0, -0.741507, 0.670945, -105.991, 22.4479, -67.999)
script = ExtResource("2_ejfgn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -77.7861, 1.08564, -104.417)
mesh = SubResource("CapsuleMesh_wtk1t")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -191.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("3_oco58")

[node name="BuildButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.309
anchor_right = 0.123
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -49.019
offset_right = 53.304
offset_bottom = -31.0
grow_vertical = 0
theme = ExtResource("4_0cv57")
theme_override_styles/normal = SubResource("StyleBoxTexture_ny5yh")
icon = ExtResource("6_mrqsi")
icon_alignment = 1
expand_icon = true

[node name="BuildPanel" type="Panel" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -143.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_0cv57")

[node name="CloseBuildMenu" type="Button" parent="Control/BuildPanel"]
layout_mode = 0
offset_left = 1070.0
offset_top = 56.0
offset_right = 1142.0
offset_bottom = 130.0
theme = ExtResource("4_0cv57")
theme_override_styles/hover = SubResource("StyleBoxTexture_uxim4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_q4gm2")
theme_override_styles/normal = SubResource("StyleBoxTexture_xcre6")
icon = ExtResource("7_vepxx")
icon_alignment = 1
expand_icon = true

[node name="Props" type="Button" parent="Control/BuildPanel"]
layout_mode = 0
offset_left = 63.0
offset_top = 99.0
offset_right = 103.0
offset_bottom = 139.0
theme = ExtResource("4_0cv57")
theme_override_styles/normal = SubResource("StyleBoxTexture_jluwk")
icon = ExtResource("8_mtqxx")
icon_alignment = 1
expand_icon = true

[node name="Buildings" type="Button" parent="Control/BuildPanel"]
layout_mode = 0
offset_left = 63.0
offset_top = 54.0
offset_right = 103.0
offset_bottom = 94.0
theme = ExtResource("4_0cv57")
theme_override_styles/normal = SubResource("StyleBoxTexture_ffs45")
icon = ExtResource("9_44fox")
icon_alignment = 1
expand_icon = true

[node name="Infrastructure" type="Button" parent="Control/BuildPanel"]
layout_mode = 0
offset_left = 62.0
offset_top = 6.0
offset_right = 104.0
offset_bottom = 46.0
theme = ExtResource("4_0cv57")
theme_override_styles/normal = SubResource("StyleBoxTexture_w5bw5")
icon = ExtResource("10_odlnt")
icon_alignment = 1
expand_icon = true

[node name="props_container" type="ScrollContainer" parent="Control/BuildPanel"]
visible = false
layout_mode = 0
offset_left = 134.0
offset_top = 7.0
offset_right = 1045.0
offset_bottom = 133.0

[node name="MarginContainer" type="MarginContainer" parent="Control/BuildPanel/props_container"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/BuildPanel/props_container/MarginContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
theme = ExtResource("4_0cv57")

[node name="Lantern" type="Button" parent="Control/BuildPanel/props_container/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme = ExtResource("4_0cv57")
keep_pressed_outside = true
text = "Lantern"

[node name="Tree" type="Button" parent="Control/BuildPanel/props_container/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme = ExtResource("4_0cv57")
keep_pressed_outside = true
text = "Tree"

[node name="infrastructure_container" type="ScrollContainer" parent="Control/BuildPanel"]
layout_mode = 0
offset_left = 134.0
offset_top = 7.0
offset_right = 1045.0
offset_bottom = 133.0

[node name="MarginContainer2" type="MarginContainer" parent="Control/BuildPanel/infrastructure_container"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/BuildPanel/infrastructure_container/MarginContainer2"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
theme = ExtResource("4_0cv57")

[node name="Street" type="Button" parent="Control/BuildPanel/infrastructure_container/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme = ExtResource("4_0cv57")
text = "Street"

[node name="buildings_container" type="ScrollContainer" parent="Control/BuildPanel"]
visible = false
layout_mode = 0
offset_left = 134.0
offset_top = 7.0
offset_right = 1045.0
offset_bottom = 133.0

[node name="MarginContainer" type="MarginContainer" parent="Control/BuildPanel/buildings_container"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/BuildPanel/buildings_container/MarginContainer"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 2
theme = ExtResource("4_0cv57")

[node name="Store" type="Button" parent="Control/BuildPanel/buildings_container/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme = ExtResource("4_0cv57")
text = "Store"

[node name="House" type="Button" parent="Control/BuildPanel/buildings_container/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme = ExtResource("4_0cv57")
text = "House"

[node name="Gas Station" type="Button" parent="Control/BuildPanel/buildings_container/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme = ExtResource("4_0cv57")
text = "Gas Station"

[node name="School" type="Button" parent="Control/BuildPanel/buildings_container/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme = ExtResource("4_0cv57")
text = "School"

[node name="Area2D" type="Area2D" parent="Control"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Area2D"]
position = Vector2(568, 112)
shape = SubResource("RectangleShape2D_jo7a6")

[node name="Cash" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = -2.398
anchor_bottom = -2.398
offset_left = 255.0
offset_top = 18.018
offset_right = 383.0
offset_bottom = 41.018
theme = ExtResource("4_0cv57")
text = "Money"

[node name="Time" type="Label" parent="Control"]
layout_mode = 1
offset_left = 87.0
offset_top = -440.0
offset_right = 236.0
offset_bottom = -417.0
theme = ExtResource("4_0cv57")
text = "TIME"

[node name="PlayerInfo" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -315.0
offset_top = -445.0
offset_right = -17.0
offset_bottom = -329.0
grow_horizontal = 0
theme = ExtResource("4_0cv57")

[node name="MenuButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 26.0
offset_top = -439.0
offset_right = 64.0
offset_bottom = -402.0
theme = ExtResource("4_0cv57")
icon = ExtResource("8_0y7he")
icon_alignment = 1
expand_icon = true

[node name="PauseMenu" type="Control" parent="Control"]
visible = false
material = SubResource("CanvasItemMaterial_sv1yx")
layout_mode = 3
anchors_preset = 0
offset_top = -457.0
offset_right = 1151.0
offset_bottom = 188.0

[node name="TextureRect" type="TextureRect" parent="Control/PauseMenu"]
layout_mode = 0
offset_left = -355.0
offset_top = -171.0
offset_right = 1565.0
offset_bottom = 909.0
texture = ExtResource("9_nq4iw")

[node name="MarginContainer" type="MarginContainer" parent="Control/PauseMenu"]
layout_mode = 0
offset_left = 869.0
offset_top = 378.0
offset_right = 1081.0
offset_bottom = 561.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PauseMenu/MarginContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="Control/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_0cv57")
text = "Continue"

[node name="TotTitle" type="Button" parent="Control/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_0cv57")
text = "Title Screen"

[node name="Settings" type="Button" parent="Control/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_0cv57")
text = "Settings"

[node name="Quit" type="Button" parent="Control/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_0cv57")
text = "Quit"

[node name="TitleSub" type="Sprite2D" parent="Control/PauseMenu"]
position = Vector2(336, 193)
scale = Vector2(0.307812, 0.290741)
texture = ExtResource("13_jcqdf")

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("8_s8av8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_u1ydi")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0o6h6")

[connection signal="button_down" from="Control/BuildButton" to="Control" method="_on_build_button_button_down"]
[connection signal="hidden" from="Control/BuildPanel" to="Control" method="_on_build_panel_hidden"]
[connection signal="button_down" from="Control/BuildPanel/CloseBuildMenu" to="Control" method="_on_close_build_menu_button_down"]
[connection signal="pressed" from="Control/BuildPanel/Props" to="Control" method="_on_props_pressed"]
[connection signal="pressed" from="Control/BuildPanel/Buildings" to="Control" method="_on_buildings_pressed"]
[connection signal="pressed" from="Control/BuildPanel/Infrastructure" to="Control" method="_on_infrastructure_pressed"]
[connection signal="pressed" from="Control/BuildPanel/props_container/MarginContainer/HBoxContainer/Lantern" to="Control" method="_on_lantern_pressed"]
[connection signal="pressed" from="Control/BuildPanel/props_container/MarginContainer/HBoxContainer/Tree" to="Control" method="_on_tree_pressed"]
[connection signal="pressed" from="Control/BuildPanel/infrastructure_container/MarginContainer2/HBoxContainer/Street" to="Control" method="_on_street_pressed"]
[connection signal="pressed" from="Control/BuildPanel/buildings_container/MarginContainer/HBoxContainer/Store" to="Control" method="_on_store_pressed"]
[connection signal="pressed" from="Control/BuildPanel/buildings_container/MarginContainer/HBoxContainer/House" to="Control" method="_on_house_pressed"]
[connection signal="pressed" from="Control/BuildPanel/buildings_container/MarginContainer/HBoxContainer/Gas Station" to="Control" method="_on_gas_station_pressed"]
[connection signal="pressed" from="Control/BuildPanel/buildings_container/MarginContainer/HBoxContainer/School" to="Control" method="_on_school_pressed"]
[connection signal="area_entered" from="Control/Area2D" to="Control" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Control/Area2D" to="Control" method="_on_area_2d_area_exited"]
[connection signal="pressed" from="Control/MenuButton" to="Control" method="_on_menu_button_pressed"]
[connection signal="pressed" from="Control/PauseMenu/MarginContainer/VBoxContainer/Continue" to="Control" method="_on_continue_pressed"]
[connection signal="pressed" from="Control/PauseMenu/MarginContainer/VBoxContainer/TotTitle" to="Control" method="_on_tot_title_pressed"]
[connection signal="pressed" from="Control/PauseMenu/MarginContainer/VBoxContainer/Settings" to="Control" method="_on_settings_pressed"]
[connection signal="pressed" from="Control/PauseMenu/MarginContainer/VBoxContainer/Quit" to="Control" method="_on_quit_pressed"]
